Lecm-im inital commit
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@694 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97