@@ -15,8 +15,15 @@
     <packaging>pom</packaging>
     <name>${project.artifactId}-${project.version}</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <gwt.extraJvmArgs>-Xms256M -Xmx5632M -XX:PermSize=64M -XX:MaxPermSize=256M -XX:+UseParallelOldGC -XX:ParallelGCThreads=4 -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=90</gwt.extraJvmArgs>
+    </properties>
+
     <modules>
         <!-- <module>repo</module> -->
         <module>share</module>
+        <module>lib</module>
+        <module>gwt-debug</module>
     </modules>
 </project>
